add inline option for viewer

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -13,32 +13,37 @@
       "Resolving Hex dependencies...\n",
       "Dependency resolution completed:\n",
       "Unchanged:\n",
-      "  ex_polars 0.2.1-dev\n",
-      "  jason 1.2.2\n",
-      "  rustler 0.22.0-rc.0\n",
-      "  toml 0.5.2\n",
-      "All dependencies are up to date\n",
-      "==> ex_polars\n",
-      "Compiling NIF crate :expolars (native/expolars)...\n",
-      "    Finished release [optimized] target(s) in 0.25s\n",
-      "Resolving Hex dependencies...\n",
-      "Dependency resolution completed:\n",
-      "Unchanged:\n",
+      "  deneb 0.2.0\n",
       "  elixir_uuid 1.2.1\n",
-      "  ex_polars 0.2.1-dev\n",
+      "  ex_polars 0.3.0-dev\n",
       "  jason 1.2.2\n",
       "  rustler 0.22.0-rc.0\n",
       "  toml 0.5.2\n",
       "  typed_struct 0.2.1\n",
-      "Upgraded:\n",
-      "\u001b[32m  deneb 0.1.0 => 0.1.1\u001b[31m\u001b[0m\n",
-      "* Updating deneb (Hex package)\n",
+      "All dependencies are up to date\n",
       "==> deneb\n",
-      "Compiling 8 files (.ex)\n",
+      "Compiling 10 files (.ex)\n",
       "Generated deneb app\n",
       "==> ex_polars\n",
       "Compiling NIF crate :expolars (native/expolars)...\n",
-      "    Finished release [optimized] target(s) in 0.20s\n"
+      "   Compiling expolars v0.1.0 (/Users/tchen/projects/mycode/elixir/IElixir/envs/polars/deps/ex_polars/native/expolars)\n",
+      "    Finished release [optimized] target(s) in 2m 18s\n",
+      "Compiling 6 files (.ex)\n",
+      "Generated ex_polars app\n",
+      "Resolving Hex dependencies...\n",
+      "Dependency resolution completed:\n",
+      "Unchanged:\n",
+      "  deneb 0.2.0\n",
+      "  elixir_uuid 1.2.1\n",
+      "  ex_polars 0.3.0-dev\n",
+      "  jason 1.2.2\n",
+      "  rustler 0.22.0-rc.0\n",
+      "  toml 0.5.2\n",
+      "  typed_struct 0.2.1\n",
+      "All dependencies are up to date\n",
+      "==> ex_polars\n",
+      "Compiling NIF crate :expolars (native/expolars)...\n",
+      "    Finished release [optimized] target(s) in 0.70s\n"
      ]
     },
     {
@@ -56,7 +61,7 @@
        ":ok"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,13 +69,13 @@
    "source": [
     "Boyle.mk(\"polars\")\n",
     "Boyle.activate(\"polars\")\n",
-    "Boyle.install({:ex_polars, \"~> 0.2.1-dev\"})\n",
-    "Boyle.install({:deneb, \"~> 0.1.1\"})"
+    "Boyle.install({:ex_polars, \"~> 0.3.0-dev\"})\n",
+    "Boyle.install({:deneb, \"~> 0.2\"})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +84,7 @@
        "[Deneb.Chart, Deneb.Encoding, Deneb.Mark, Deneb.Projection, Deneb.Transform, Deneb.Viewer]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +131,7 @@
        "╰────────────┴───────┴───────┴───────┴───────┴────────┴──────────╯"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,16 +142,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div id=\"deneb-chart-6c016f6b90104db89f995b9595f9998f\"></div>\n",
+       "<div id=\"deneb-chart-0b0638bf53e64936811ab263255eca9a\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "(function(spec, embedOpt) {\n",
-       "  const outputDiv = document.getElementById(\"deneb-chart-6c016f6b90104db89f995b9595f9998f\");\n",
+       "  const outputDiv = document.getElementById(\"deneb-chart-0b0638bf53e64936811ab263255eca9a\");\n",
        "  const urls = {\n",
        "    \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5.18.0\",\n",
        "    \"vega-lite\": \"https://cdn.jsdelivr.net/npm/vega-lite@4.17.0\",\n",
@@ -209,13 +214,13 @@
     "chart1 = Chart.new(Mark.new(:rule), Encoding.new(%{y: %{field: \"low\"}, y2: %{field: \"high\"}}))\n",
     "chart2 = Chart.new(Mark.new(:bar), Encoding.new(%{y: %{field: \"open\"}, y2: %{field: \"close\"}}))\n",
     "chart = Chart.layer([chart1, chart2], [encoding: encoding, width: 800, height: 600])\n",
-    "spec = Deneb.to_json(data, chart)\n",
+    "spec = Deneb.to_json(chart, data)\n",
     "{:\"this is raw html\", Viewer.display(spec)}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +254,7 @@
        "╰────────┴──────────────────┴──────┴─────────────────╯"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,16 +265,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div id=\"deneb-chart-1a3768fe66a94c9287cbaca74936f3fe\"></div>\n",
+       "<div id=\"deneb-chart-bae9b343fa5447a298b3d223d92ecd11\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "(function(spec, embedOpt) {\n",
-       "  const outputDiv = document.getElementById(\"deneb-chart-1a3768fe66a94c9287cbaca74936f3fe\");\n",
+       "  const outputDiv = document.getElementById(\"deneb-chart-bae9b343fa5447a298b3d223d92ecd11\");\n",
        "  const urls = {\n",
        "    \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5.18.0\",\n",
        "    \"vega-lite\": \"https://cdn.jsdelivr.net/npm/vega-lite@4.17.0\",\n",
@@ -325,28 +330,53 @@
     "    y: %{field: \"variety\"},\n",
     "    color: %{field: \"site\"}\n",
     "}))\n",
-    "spec = Deneb.to_json(data, Chart.to_json(c, [width: 800, height: 600]))\n",
+    "spec = Deneb.to_json(Chart.to_json(c, [width: 800, height: 600]), data)\n",
     "{:\"this is raw html\", Viewer.display(spec)}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"yield,variety,year,site\\n27,Manchuria,1931,University Farm\\n48.86667,Manchuria,1931,Waseca\\n27.43334,Manchuria,1931,Morris\\n39.93333,Manchuria,1931,Crookston\\n32.96667,Manchuria,1931,Grand Rapids\\n28.96667,Manchuria,1931,Duluth\\n43.06666,Glabron,1931,University Farm\\n55.2,Glabron,1931,Waseca\\n28.76667,Glabron,1931,Morris\\n38.13333,Glabron,1931,Crookston\\n29.13333,Glabron,1931,Grand Rapids\\n29.66667,Glabron,1931,Duluth\\n35.13333,Svansota,1931,University Farm\\n47.33333,Svansota,1931,Waseca\\n25.76667,Svansota,1931,Morris\\n40.46667,Svansota,1931,Crookston\\n29.66667,Svansota,1931,Grand Rapids\\n25.7,Svansota,1931,Duluth\\n39.9,Velvet,1931,University Farm\\n50.23333,Velvet,1931,Waseca\\n26.13333,Velvet,1931,Morris\\n41.33333,Velvet,1931,Crookston\\n23.03333,Velvet,1931,Grand Rapids\\n26.3,Velvet,1931,Duluth\\n36.56666,Trebi,1931,University Farm\\n63.8333,Trebi,1931,Waseca\\n43.76667,Trebi,1931,Morris\\n46.93333,Trebi,1931,Crookston\\n29.76667,Trebi,1931,Grand Rapids\\n33.93333,Trebi,1931,Duluth\\n43.26667,No. 457,1931,University Farm\\n58.1,No. 457,1931,Waseca\\n28.7,No. 457,1931,Morris\\n45.66667,No. 457,1931,Crookston\\n32.16667,No. 457,1931,Grand Rapids\\n33.6,No. 457,1931,Duluth\\n36.6,No. 462,1931,University Farm\\n65.7667,No. 462,1931,Waseca\\n30.36667,No. 462,1931,Morris\\n48.56666,No. 462,1931,Crookston\\n24.93334,No. 462,1931,Grand Rapids\\n28.1,No. 462,1931,Duluth\\n32.76667,Peatland,1931,University Farm\\n48.56666,Peatland,1931,Waseca\\n29.86667,Peatland,1931,Morris\\n41.6,Peatland,1931,Crookston\\n34.7,Peatland,1931,Grand Rapids\\n32,Peatland,1931,Duluth\\n24.66667,No. 475,1931,University Farm\\n46.76667,No. 475,1931,Waseca\\n22.6,No. 475,1931,Morris\\n44.1,No. 475,1931,Crookston\\n19.7,No. 475,1931,Grand Rapids\\n33.06666,No. 475,1931,Duluth\\n39.3,Wisconsin No. 38,1931,University Farm\\n58.8,Wisconsin No. 38,1931,Waseca\\n29.46667,Wisconsin No. 38,1931,Morris\\n49.86667,Wisconsin No. 38,1931,Crookston\\n34.46667,Wisconsin No. 38,1931,Grand Rapids\\n31.6,Wisconsin No. 38,1931,Duluth\\n26.9,Manchuria,1932,University Farm\\n33.46667,Manchuria,1932,Waseca\\n34.36666,Manchuria,1932,Morris\\n32.96667,Manchuria,1932,Crookston\\n22.13333,Manchuria,1932,Grand Rapids\\n22.56667,Manchuria,1932,Duluth\\n36.8,Glabron,1932,University Farm\\n37.73333,Glabron,1932,Waseca\\n35.13333,Glabron,1932,Morris\\n26.16667,Glabron,1932,Crookston\\n14.43333,Glabron,1932,Grand Rapids\\n25.86667,Glabron,1932,Duluth\\n27.43334,Svansota,1932,University Farm\\n38.5,Svansota,1932,Waseca\\n35.03333,Svansota,1932,Morris\\n20.63333,Svansota,1932,Crookston\\n16.63333,Svansota,1932,Grand Rapids\\n22.23333,Svansota,1932,Duluth\\n26.8,Velvet,1932,University Farm\\n37.4,Velvet,1932,Waseca\\n38.83333,Velvet,1932,Morris\\n32.06666,Velvet,1932,Crookston\\n32.23333,Velvet,1932,Grand Rapids\\n22.46667,Velvet,1932,Duluth\\n29.06667,Trebi,1932,University Farm\\n49.2333,Trebi,1932,Waseca\\n46.63333,Trebi,1932,Morris\\n41.83333,Trebi,1932,Crookston\\n20.63333,Trebi,1932,Grand Rapids\\n30.6,Trebi,1932,Duluth\\n26.43334,No. 457,1932,University Farm\\n42.2,No. 457,1932,Waseca\\n43.53334,No. 457,1932,Morris\\n34.33333,No. 457,1932,Crookston\\n19.46667,No. 457,1932,Grand Rapids\\n22.7,No. 457,1932,Duluth\\n25.56667,No. 462,1932,University Farm\\n44.7,No. 462,1932,Waseca\\n47,No. 462,1932,Morris\\n30.53333,No. 462,1932,Crookston\\n19.9,No. 462,1932,Grand Rapids\\n22.5,No. 462,1932,Duluth\\n28.06667,Peatland,1932,University Farm\\n36.03333,Peatland,1932,Waseca\\n43.2,Peatland,1932,Morris\\n25.23333,Peatland,1932,Crookston\\n26.76667,Peatland,1932,Grand Rapids\\n31.36667,Peatland,1932,Duluth\\n30,No. 475,1932,University Farm\\n41.26667,No. 475,1932,Waseca\\n44.23333,No. 475,1932,Morris\\n32.13333,No. 475,1932,Crookston\\n15.23333,No. 475,1932,Grand Rapids\\n27.36667,No. 475,1932,Duluth\\n38,Wisconsin No. 38,1932,University Farm\\n58.16667,Wisconsin No. 38,1932,Waseca\\n47.16667,Wisconsin No. 38,1932,Morris\\n35.9,Wisconsin No. 38,1932,Crookston\\n20.66667,Wisconsin No. 38,1932,Grand Rapids\\n29.33333,Wisconsin No. 38,1932,Duluth\\n\""
+       "shape: (150, 5)\n",
+       "╭─────────────┬────────────┬─────────────┬────────────┬───────────╮\n",
+       "│ sepalLength ┆ sepalWidth ┆ petalLength ┆ petalWidth ┆ species   │\n",
+       "│ ---         ┆ ---        ┆ ---         ┆ ---        ┆ ---       │\n",
+       "│ f64         ┆ f64        ┆ f64         ┆ f64        ┆ str       │\n",
+       "╞═════════════╪════════════╪═════════════╪════════════╪═══════════╡\n",
+       "│ 5.1         ┆ 3.5        ┆ 1.4         ┆ 0.2        ┆ setosa    │\n",
+       "├╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌┤\n",
+       "│ 4.9         ┆ 3          ┆ 1.4         ┆ 0.2        ┆ setosa    │\n",
+       "├╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌┤\n",
+       "│ 4.7         ┆ 3.2        ┆ 1.3         ┆ 0.2        ┆ setosa    │\n",
+       "├╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌┤\n",
+       "│ 4.6         ┆ 3.1        ┆ 1.5         ┆ 0.2        ┆ setosa    │\n",
+       "├╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌┤\n",
+       "│ ...         ┆ ...        ┆ ...         ┆ ...        ┆ ...       │\n",
+       "├╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌┤\n",
+       "│ 6.7         ┆ 3          ┆ 5.2         ┆ 2.3        ┆ virginica │\n",
+       "├╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌┤\n",
+       "│ 6.3         ┆ 2.5        ┆ 5           ┆ 1.9        ┆ virginica │\n",
+       "├╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌┤\n",
+       "│ 6.5         ┆ 3          ┆ 5.2         ┆ 2          ┆ virginica │\n",
+       "├╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌┤\n",
+       "│ 6.2         ┆ 3.4        ┆ 5.4         ┆ 2.3        ┆ virginica │\n",
+       "├╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌┤\n",
+       "│ 5.9         ┆ 3          ┆ 5.1         ┆ 1.8        ┆ virginica │\n",
+       "╰─────────────┴────────────┴─────────────┴────────────┴───────────╯"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data"
+    "df = ExPolars.Datasets.iris"
    ]
   },
   {
@@ -354,7 +384,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "DF.plot_"
+   ]
   }
  ],
  "metadata": {
